Bug 73556 - FILESAVE: DOCX column width exported incorrectly
Summary: FILESAVE: DOCX column width exported incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: All All
: medium normal
Assignee: Vinaya Mandke
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: 77965
  Show dependency treegraph
 
Reported: 2014-01-13 13:55 UTC by Vinaya Mandke
Modified: 2014-04-26 12:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Column-Width-reduces-after-Roundtrip (11.84 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-13 13:55 UTC, Vinaya Mandke
Details
Column-Width-reduces-after-Roundtrip (8.57 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-20 13:43 UTC, Vinaya Mandke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vinaya Mandke 2014-01-13 13:55:57 UTC
Created attachment 91946 [details]
Column-Width-reduces-after-Roundtrip

The table column width decreases after exporting back in DOCX.

Steps to Reproduce:
1. Open attachment in LO
2. Save as docx
3. Open the original file and the saved file in MS Office
4. Compare the table width in both the files.
Comment 1 Vinaya Mandke 2014-01-20 13:43:12 UTC
Created attachment 92449 [details]
Column-Width-reduces-after-Roundtrip
Comment 2 Jorendc 2014-01-20 15:52:27 UTC
Reproducible, tested using Mac OSX 10.9 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 99159a618fd1ea90a2bc8a72621c88a4cf26e6f5
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-01-17_06:36:23 and Word for Mac 2011.

Looks like there is already a commit under review (https://gerrit.libreoffice.org/#/c/7540/). Lets mark as ASSIGNED :-). (sorry, just nitpicking)

Kind regards,
Joren
Comment 3 Commit Notification 2014-01-27 09:58:12 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c035c3dc527c0756b51865124b96c507c44743ed

fdo#73556 Docx was exported with incorrect column width



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Jorendc 2014-04-26 12:05:52 UTC
Looks fixed to me, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha1+
Build ID: f4a6837025a293312cbc43b9c527851362f11030
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-04-26_09:21:18

Table WIDTH is preserved correctly. Still some issues with row height. Reporting in another bug report.

Kind regards,
Joren