fdo#73556 Docx was exported with incorrect column width

The file contains a table with 3 columns. The girdcols
are as follows: {1210, 1331, 1210}, whereas the
individual cells have {1210, 400, 1210}.
The table column separators were taken from the grid while
the table width was calculated as 2820 from cells
instead of 3751 from the grid.
Hence the table width reduced after export to DOCX

Change-Id: I2c590ad6b5ec9fe3e8559971ca8cfa69c5343f47